# VC_C_Projects

./: README.md  client.c  client2.c  sendClient.h  server.c  server2.c  yashwanth_client.c  yashwanth_server.c
chandana/Device_Driver/array_par/: .Module.symvers.cmd  .array_param.ko.cmd  .array_param.mod.cmd  .array_param.mod.o.cmd  .array_param.o.cmd  .modules.order.cmd  Makefile  array_param.c  array_param.ko  array_param.mod.c  modules.order
chandana/Device_Driver/char_driver/: .Module.symvers.cmd  .modules.order.cmd  .mychardev.ko.cmd  .mychardev.mod.cmd  .mychardev.mod.o.cmd  .mychardev.o.cmd  mychardev.ko  mychardev.mod  mychardev.mod.c  userspace.c
chandana/Device_Driver/file/: .Module.symvers.cmd  .modules.order.cmd  .sample.ko.cmd  .sample.mod.cmd  .sample.mod.o.cmd  .sample.o.cmd  sample.c  sample.ko  sample.mod  sample.mod.c
chandana/Device_Driver/hello/: .Module.symvers.cmd  .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .modules.order.cmd  hello.ko  modules.order
chandana/Device_Driver/ioctl/: .Module.symvers.cmd  .chardev.ko.cmd  .chardev.mod.cmd  .chardev.mod.o.cmd  .chardev.o.cmd  .modules.order.cmd  Makefile  chardev.c  chardev.ko  chardev.mod  chardev.mod.c  ioctl_program  ioctl_program.c
chandana/Device_Driver/module_parameters/: .Module.symvers.cmd  .module_p.ko.cmd  .module_p.mod.cmd  .module_p.mod.o.cmd  .module_p.o.cmd  .modules.order.cmd  Makefile  module_p.ko  module_p.mod.c  modules.order
chandana/Device_Driver/sysfs/: .Module.symvers.cmd  .modules.order.cmd  .yash_sysfs.ko.cmd  .yash_sysfs.mod.cmd  .yash_sysfs.mod.o.cmd  .yash_sysfs.o.cmd  yash_sysfs.c  yash_sysfs.ko  yash_sysfs.mod  yash_sysfs.mod.c
chandana/hello_world sample/: hello.ko
dinesh/Basic_programs/Hello_world/: .Hello.ko.cmd  .Hello.mod.cmd  .Hello.mod.o.cmd  .Hello.o.cmd  Hello.c  Hello.ko  Hello.mod  Hello.mod.c  Makefile  modules.order
dinesh/Basic_programs/file_op/: .file_op.ko.cmd  .file_op.mod.cmd  .file_op.mod.o.cmd  .file_op.o.cmd  Makefile  a.out  file_op.c  file_op.ko  file_op.mod  file_op.mod.c  modules.order  userp.c
dinesh/Basic_programs/ioctl/: .ioctl.ko.cmd  .ioctl.mod.cmd  .ioctl.o.cmd  (+9 more)
dinesh/uart_proj/: UART.tar.xz
hello_world sample/: hello.mod.c  modules.order
nandivardhan/: client_base.c  include_structure.h  server_base.c  updateScoreboard.h
pavani/: server.c
pavani/cmake_project/Client/: CMakeLists.txt  add_item.c  add_item.h  admin.c  admin.h  clear_input_buffer.c  clear_input_buffer.h  customer.c  customer.h  display_menu.c  display_menu.h  display_order_history.c  display_order_history.h  display_restaurants.c  display_restaurants.h  header_file.c  header_file.h  main.c  place_order.c  place_order.h  remove_item.c  remove_item.h  update_item.c  update_item.h
pavani/cmake_project/Server/: CMakeLists.txt  add_admin.c  add_admin.h  add_item.c  add_item.h  add_order.c  add_order.h  add_restaurants.c  add_restaurants.h  admin_s.c  admin_s.h  calculate_overall_sales.c  calculate_overall_sales.h  check_admin.c  check_admin.h  customer_s.c  customer_s.h  database.h  debug.c  delete_restaurants.c  delete_restaurants.h  display_menu.c  display_menu.h  display_restaurants.c  display_restaurants.h  generate_invoice.c  generate_invoice.h  get_customer_id.c  get_customer_id.h  get_item_price.c  get_item_price.h  isItem.c  isItem.h  place_order.c  place_order.h  remove_item.c  remove_item.h  update_item.c  update_item.h  view_order_history.c  (+1 more)
pavani/cmake_project2/client/: CMakeLists.txt  admin.c  admin.h  customer.c  customer.h  debug.c  debug_log.h  display_menu.c  display_menu.h  helper_func.c  helper_func.h  main.c
pavani/cmake_project2/server/: CMakeLists.txt  admin_s.c  admin_s.h  customer_s.c  customer_s.h  debug_log.h  display_menu.c  display_menu.h  main.c  ordered_item.h
yashwanth/: client.c
yashwanth/CProject/: restaurant.db
yashwanth/Test_Project_CTest/add_order/: CMakeLists.txt  T5.c  test.c
yashwanth/linux/: .Module.symvers.cmd  .demo.ko.cmd  .demo.mod.cmd  .demo.mod.o.cmd  .demo.o.cmd  .freeDeviceNumbers.ko.cmd  .freeDeviceNumbers.mod.cmd  .freeDeviceNumbers.mod.o.cmd  .freeDeviceNumbers.o.cmd  .helloWorld.ko.cmd  .helloWorld.mod.cmd  .helloWorld.mod.o.cmd  .helloWorld.o.cmd  .moduleParameter.ko.cmd  .moduleParameter.mod.cmd  .moduleParameter.mod.o.cmd  .moduleParameter.o.cmd  .modules.order.cmd
(+169 files in other folders)
